src/test/deca/context/invalid/this-invalidMain.context
this-invalidMain.deca:2: